--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,10 +7,9 @@ add_subdirectory(BitGraph)
 
 add_executable(CliSAT main.cpp
         bitscan_benchmark.h
-        custom_bitset.cpp
         custom_bitset.h
-        custom_graph.cpp
-        custom_graph.h)
+        custom_graph.h
+)
 
 target_link_libraries(CliSAT graph bitscan utils)
 target_include_directories(CliSAT PUBLIC
@@ -20,4 +19,4 @@ target_include_directories(CliSAT PUBLIC
 
 set(CMAKE_CXX_FLAGS "-Wall -Wextra")
 set(CMAKE_CXX_FLAGS_DEBUG "-g")
-set(CMAKE_CXX_FLAGS_RELEASE "-O3 -march=x86-64")
+set(CMAKE_CXX_FLAGS_RELEASE "-O3 -march=x86-64-v4 -flto")
