Reverted creation of BBMC.cpp. Implemented first version of CliSAT (still a lot of work to do to make it work). Various fixes (cast from custom_bitset to vector is const now, wrong ordering_vector attribute overwrite when creating a graph with custom ordering).Separated sort algorithms from graph class. Next step -> Implement ANTS heuristic. After that we can slowly integrate FiltCOL, FiltSAT and SATCOL (not strictly necessary for CliSAT to work).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,8 @@ add_executable(CliSAT main.cpp
         BBMC.h
         BBMCR.h
         CliSAT.h
-        BBMC.cpp
+        sorting.h
+        ANTS.h
 )
 
 target_link_libraries(CliSAT graph bitscan utils)
