Feat: added run time instruction support + refactoring With the instructions module I'm trying to implement run time support for instructions to speed up the code. In particular the POPCNT instruction isn't present in the original release of the x86-64 inst set, so there is a chance to optimize using it on supported platforms. Refactoring of some methods for custom_bitset (AND, SUB, etc...). Added inline and noexcept to custom_bitset and custom_graph. Removed inline on all methods that aren't in custom_bitset or custom_graph. Added color_class vector cache in FiltCOL. Improved sub problem calculation thanks to the introduction of the P_Bj bitset, a bitset containing all elements of P and all elements of B up to j. Lastly, in custom_bitset using vector.data() instead of using directly the subscript operator leads to the use of SSE instructions (vectorization).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,7 @@ target_sources(CliSAT
             CliSAT.ixx
             sorting.ixx
             coloring.ixx
+            instructions.ixx
 )
 
 target_include_directories(CliSAT PUBLIC
