--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,16 @@ option(STATIC "Enable static linking of libraries" ON)
 
 include_directories(${PROJECT_SOURCE_DIR}/include)
 
+# testing
+add_subdirectory(third_party/Catch2)
+# These tests can use the Catch2-provided main
+add_executable(tests tests/test_example.cpp)
+target_link_libraries(tests PRIVATE Catch2::Catch2WithMain)
+
+# These tests need their own main
+# add_executable(custom-main-tests test.cpp test-main.cpp)
+# target_link_libraries(custom-main-tests PRIVATE Catch2::Catch2)
+
 add_executable(CliSAT
     src/main.cpp
     src/CliSAT.cpp
